--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -13,21 +13,22 @@ block manifestBrowserconfigFiles
 
 block content
   main
-    include ../components/search/search-hero
     .search
-      include ../components/search/search-filter
-      .wrapper
-        include ../components/search/search-link
-        .search__wrapper
-          .search__sidebar
-            include ../components/search/search-map
-            include ../components/search/search-sidebar
-          .search__blocks
-            include ../components/search/search-keywords
-            include ../components/search/search-sorting
-            include ../components/search/search-cards
-            include ../components/attractions/attractions-information
-            include ../components/search/search-cards
-            include ../components/pagination-huge
+      include ../components/search/search-hero
+      .search__main
+        include ../components/search/search-filter
+        .wrapper
+          include ../components/search/search-button
+          .search__wrapper
+            .search__sidebar
+              include ../components/search/search-map
+              include ../components/search/search-sidebar
+            .search__blocks
+              include ../components/search/search-keywords
+              include ../components/search/search-sorting
+              include ../components/search/search-cards
+              include ../components/attractions/attractions-information
+              include ../components/search/search-cards
+              include ../components/pagination-huge
 
 
