--- a/src/assets/styles/components/search/search.scss
+++ b/src/assets/styles/components/search/search.scss
@@ -1,14 +1,4 @@
 .search {
-  background-color: $bg-blue;
-  position: relative;
-  @include max-screen(tablet-2x) {
-
-  }
-
-  @include min-screen(laptop) {
-    padding-top: 30px;
-    padding-bottom: 60px;
-  }
 
   &__wrapper {
     @include max-screen(tablet) {
@@ -19,6 +9,18 @@
       column-gap: 24px;
       display: grid;
       margin-top: 30px;
+    }
+  }
+
+  &__main {
+    background-color: $bg-blue;
+    position: relative;
+    @include max-screen(tablet-2x) {
+      padding-bottom: 50px;
+    }
+    @include min-screen(laptop) {
+      padding-top: 30px;
+      padding-bottom: 60px;
     }
   }
 
@@ -36,7 +38,7 @@
       inset: 0;
       display: block;
       z-index: 25;
-      padding-top: 292px;
+      // padding-top: 292px;
     }
   }
 }
