--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -109,6 +109,7 @@ html(lang="ru")
     include ../components/reviews/reviews-popup
     include ../components/reviews/reviews-create-popup
     include ../components/how-to-book/how-to-book-popup
+    include ../components/search/search-sorting-popup
 
     include ../components/footer
 
