--- a/src/views/components/search/search-button.pug
+++ b/src/views/components/search/search-button.pug
@@ -3,14 +3,14 @@ section.search-button
     .swiper
       .swiper-wrapper
         .swiper-slide
-          button.search-button__item(type="button") 5-звездочные 
+          .search-button__item 5-звездочные 
         .swiper-slide
-          button.search-button__item(type="button") Снять жилье быстро
+          .search-button__item Снять жилье быстро
         .swiper-slide
-          button.search-button__item(type="button") Снять жилье без депозита
+          .search-button__item Снять жилье без депозита
         .swiper-slide
-          button.search-button__item(type="button") Снять жилье в 10 минутах от метро
+          .search-button__item Снять жилье в 10 минутах от метро
         .swiper-slide
-          button.search-button__item(type="button") Снять жилье с двумя спальнями
+          .search-button__item Снять жилье с двумя спальнями
         .swiper-slide
-          button.search-button__item(type="button") Снять жилье с кондиционером
+          .search-button__item Снять жилье с кондиционером
