--- a/src/views/components/search/search-hero.pug
+++ b/src/views/components/search/search-hero.pug
@@ -4,37 +4,37 @@
       .swiper
         .swiper-wrapper
           .swiper-slide
-            button.search-hero__link(type="button")
+            .search-hero__link
               svg(width="18" height="18" viewBox="0 0 18 18")
                 use(xlink:href="#svg-water-default")
               span Санатории
           .swiper-slide
-            button.search-hero__link(type="button")
+            .search-hero__link
               svg(width="18" height="18" viewBox="0 0 18 18")
                 use(xlink:href="#svg-bed-default")
               span Отели
           .swiper-slide
-            button.search-hero__link.active(type="button")
+            .search-hero__link.active
               svg(width="18" height="18" viewBox="0 0 18 18")
                 use(xlink:href="#svg-building-default")
               span Жилье посуточно
           .swiper-slide
-            button.search-hero__link(type="button")
+            .search-hero__link
               svg(width="20" height="20" viewBox="0 0 20 20")
                 use(xlink:href="#svg-flying-default")
               span Авиабилеты
           .swiper-slide
-            button.search-hero__link(type="button")
+            .search-hero__link
               svg(width="18" height="18" viewBox="0 0 18 18")
                 use(xlink:href="#svg-direction-default")
               span Экскурсии
           .swiper-slide
-            button.search-hero__link(type="button")
+            .search-hero__link
               svg(width="18" height="18" viewBox="0 0 18 18")
                 use(xlink:href="#svg-house-default")
               span Базы отдыха
           .swiper-slide
-            button.search-hero__link(type="button")
+            .search-hero__link
               svg(width="18" height="18" viewBox="0 0 18 18")
                 use(xlink:href="#svg-shape-default")
               span Детские лагеря
