--- a/src/assets/styles/base/global.scss
+++ b/src/assets/styles/base/global.scss
@@ -173,3 +173,8 @@ svg {
 .icon-marker {
   background-color: transparent;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
