--- a/src/assets/styles/components/search/search-hero.scss
+++ b/src/assets/styles/components/search/search-hero.scss
@@ -69,6 +69,9 @@
         background-color: rgba($color: $white, $alpha: 0.2);
       }
     }
+    &:not(.active) {
+      cursor: pointer;
+    }
     &.active {
       background-color: $orange-500;
       svg {
