--- a/src/assets/styles/components/search/search-sidebar.scss
+++ b/src/assets/styles/components/search/search-sidebar.scss
@@ -547,25 +547,43 @@
     transition: opacity $transition-default;
   }
 
-  .ui-slider {
-    height: 4px;
-    border-radius: 30px;
-    background-color: rgba($color: $blue-700, $alpha: 0.15);
-    border: none;
-  }
+  &-cost,
+  &-area {
+    &__slider {
+      max-width: 412px;
+      margin-top: 27px;
+      background-color: rgba($color: $blue-700, $alpha: 0.15);
+      border-radius: 30px;
+      border: none;
+      height: 4px;
+      box-shadow: none;
+      .noUi-connect {
+        background-color: rgba($color: $orange-500, $alpha: 0.5);
+      }
+      .noUi-origin {
+        width: calc(100% - 17px);
+      }
+      .noUi-handle {
+        right: 0px;
+        background-color: $orange-500;
+        border: none;
+        width: 18px;
+        height: 18px;
+        border-radius: 50px;
+        box-shadow: 0px 2px 3px 1px rgba($color: $black-400, $alpha: 0.05 );
+        cursor: pointer;
+        &:before,
+        &:after {
+          display: none;
+        }
+      }
+      .noUi-target {
+        cursor: pointer;
 
-  .ui-slider-handle {
-    background-color: $orange-500;
-    border: none;
-    width: 18px;
-    height: 18px;
-    border-radius: 50px;
-    box-shadow: 0px 2px 3px 1px rgba($color: $black-400, $alpha: 0.05 );
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  .ui-slider-range {
-    height: 4px;
-    background-color: rgba($color: $orange-500, $alpha: 0.5);
+        &:focus {
+          outline: none;
+        }
+      }
+    }
   }
 }
