--- a/src/views/components/search/search-sidebar.pug
+++ b/src/views/components/search/search-sidebar.pug
@@ -444,10 +444,10 @@ aside.search-sidebar
           .search-sidebar__costs
             .search-sidebar__value
               span От
-              input.search-sidebar__cost.search-sidebar__cost--left(type="text")
+              input.search-sidebar__cost.search-sidebar__cost--left(type="number")
             .search-sidebar__value
               span До
-              input.search-sidebar__cost.search-sidebar__cost--right(type="text")
+              input.search-sidebar__cost.search-sidebar__cost--right(type="number")
           .search-sidebar__list
             label.search-sidebar__label
               input.search-sidebar__input(
