--- a/src/assets/styles/mixins/search-card.scss
+++ b/src/assets/styles/mixins/search-card.scss
@@ -2,6 +2,7 @@
   display: flex;
   border-radius: 6px;
   overflow: hidden;
+  background-color: $white;
   box-shadow: 0px 1px 3px 1px rgba($color: $black-400, $alpha: 0.03);
   @include max-screen(tablet) {
     flex-direction: column;
@@ -10,9 +11,12 @@
     transition: box-shadow $transition-default;
     &:hover {
       box-shadow: 0px 5px 20px 0px rgba($color: $black-400, $alpha: 0.07), 0px 1px 3px 1px rgba($color: $black-400, $alpha: 0.04);
-
     }
   }
+  &__room {
+    display: none;
+  }
+  
   &__information {
     position: relative;
     display: flex;
@@ -45,16 +49,6 @@
         }
       }
     }
-    // p {
-    //   font-size: 16px;
-    //   font-weight: 400;
-    //   line-height: 18px;
-    //   color: rgba($color: $black-300, $alpha: 0.75);
-    //   span {
-    //     font-weight: 800;
-    //     color: $black-400;
-    //   }
-    // }
     svg {
       display: inline-block;
       stroke: transparent;
@@ -66,6 +60,9 @@
     @include max-screen(tablet) {
       display: flex;
       flex-direction: column;
+    }
+    .search-card__items {
+      display: none;
     }
   }
 
@@ -444,7 +441,6 @@
   &__image {
     height: auto;
     overflow: hidden;
-    border-radius: 8px 8px 0 0;
     position: relative;
     @include max-screen(tablet) {
       width: 100%;
@@ -453,7 +449,6 @@
     @include min-screen(tablet-2x) {
       max-height: 220px;
       height: 220px;
-      border-radius: 8px 0 0 8px;
     }
     @include mm-screen(tablet-2x) {
       width: 300px;
