--- a/src/views/components/search/search-filter.pug
+++ b/src/views/components/search/search-filter.pug
@@ -12,7 +12,7 @@
           use(xlink:href="#svg-search-sorting")
         .search-filter__name Сортировать
       
-      button.search-filter__block.search-filter__map(type="button")
+      a.search-filter__block.search-filter__map(href="/search-map")
         svg(width="18" height="18" viewBox="0 0 18 18")
           use(xlink:href="#svg-search-pin")
         .search-filter__name На карте
