--- a/src/views/components/search/search-map.pug
+++ b/src/views/components/search/search-map.pug
@@ -1,5 +1,6 @@
 .search-map
-  .search-map__card.search-map__card--mini
+  .search-map__card // .search-map__card--mini - изменить на мини карточку
+  
     +search-card(
     {
       cashback: 'Кэшбек <span>500 ₽</span>',
