--- a/src/views/components/search/search-map.pug
+++ b/src/views/components/search/search-map.pug
@@ -1,5 +1,5 @@
 .search-map
-  .search-map__card // .search-map__card--mini - изменить на мини карточку
+  .search-map__card // добавить класс: .search-map__card--mini - изменить на мини карточку
   
     +search-card(
     {
