--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -43,6 +43,7 @@
 @import "./components/footer/footer-nav";
 @import "./components/footer/footer-places";
 @import "./components/footer/footer-bottom";
+@import "./components/footer/footer-criterias";
 
 @import "./components/main/main-faq";
 @import "./components/main/main-promo";
