--- a/src/views/components/footer.pug
+++ b/src/views/components/footer.pug
@@ -1,5 +1,6 @@
 footer.footer
   .wrapper
+    include ./footer/footer-criterias
     include ./footer/footer-reviews
     include ./footer/footer-confirmation
   include ./footer/footer-partners
