--- a/src/assets/styles/components/footer/footer-city.scss
+++ b/src/assets/styles/components/footer/footer-city.scss
@@ -61,13 +61,21 @@
   }
 
   &__button {
-    display: flex;
+    display: inline-flex;
     gap: 6px;
     position: absolute;
     right: 0;
     background-color: $white;
     &.active {
-      display: none;
+      position: relative;
+      padding: 0;
+      inset: auto;
+      svg {
+        transform: rotate(270deg);
+      }
+      &:before {
+        display: none;
+      }
     }
     &:before {
       position: absolute;
