add object page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -118,3 +118,7 @@
 @import "./components/search/search-sorting-popup";
 @import "./components/search/search-map";
 
+@import "./components/object/object";
+@import "./components/object/object-sidebar";
+@import "./components/object/object-information";
+@import "./components/object/object-transfer";
