--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -50,6 +50,7 @@ $gray-700: #FFFFFFA6;
 $gray-800: #64749A;
 $gray-900: #4B6AA6;
 
+$green-100: #2CC753;
 $green-200: #14C405;
 $green-300: #0BAB8B;
 $green-400: #23C1A1;
@@ -67,6 +68,7 @@ $red-400: #FC4210;
 $red-500: #FC4310;
 $red-600: #FC3F1D;
 $red-700: #EF1E25;
+$red-800: #DE1100;
 $red-900: #CD0505;
 
 $yellow-400: #FFCC00;
