update object page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -122,3 +122,6 @@
 @import "./components/object/object-sidebar";
 @import "./components/object/object-information";
 @import "./components/object/object-transfer";
+@import "./components/object/object-search";
+@import "./components/object/object-conditions";
+@import "./components/object/object-card";
