--- a/src/views/components/object/object-transfer.pug
+++ b/src/views/components/object/object-transfer.pug
@@ -5,8 +5,9 @@
         use(xlink:href="#svg-flight")
     .object-transfer__description
       h4.object-transfer__title Авиабилеты и трансфер
-      p.object-transfer__text Авиабилеты и трансфер не входят в стоимость путевки, но наши менеджеры подберут и забронируют их для Вас дополнительно (без коммисий и переплат). Звоните по телефону:
+      p.object-transfer__text Авиабилеты и трансфер <span>не входят</span> в стоимость путевки, но наши менеджеры подберут и забронируют их для Вас дополнительно (без коммисий и переплат). Звоните по телефону:
         a(href="tel:+7 800 333 41 99") 8 800 333 41 99
     .object-transfer__links
       a.object-transfer__link(href="#") Поиск авиабилетов
-      a.object__link(href="#") Стоимость трансфера
+      a.object__link.object__link--small(href="#")
+        span Стоимость трансфера
