--- a/src/views/pages/object.pug
+++ b/src/views/pages/object.pug
@@ -19,6 +19,9 @@ block content
         .object__blocks
           include ../components/object/object-information
           include ../components/object/object-transfer
-
         .object__sidebar
           include ../components/object/object-sidebar
+      
+      include ../components/object/object-search
+      include ../components/object/object-conditions
+      include ../components/object/object-card
